# void-spectrum

./: Cargo.toml  LICENSE  README.md  README_ZH.md
.github/workflows/: ci.yml  release.yml
crates/spectrum-codegen/: Cargo.toml
crates/spectrum-codegen/src/: error.rs  lib.rs
crates/spectrum-codegen/tests/: codegen.rs
crates/spectrum-core/: Cargo.toml
crates/spectrum-core/src/: color.rs  font.rs  length.rs  lib.rs  line_height.rs  radius.rs  shadow.rs  theme.rs
crates/spectrum-core/src/color/: error.rs  rgb.rs  rgba.rs
crates/spectrum-core/src/font/: error.rs  style.rs  weight.rs
crates/spectrum-core/tests/: color.rs  font.rs  length.rs  line_height.rs  radius.rs  shadow.rs  theme.rs
crates/spectrum-export/: Cargo.toml
crates/spectrum-export/src/: lib.rs
crates/spectrum-iced/: Cargo.toml
crates/spectrum-iced/examples/: basic.rs
crates/spectrum-iced/src/: error.rs  lib.rs
crates/spectrum-iced/tests/: style.rs
crates/spectrum-macros/: Cargo.toml
crates/spectrum-macros/src/: lib.rs
crates/spectrum-macros/tests/: define.rs
crates/spectrum-palette/: Cargo.toml
crates/spectrum-palette/src/: domains.rs  lib.rs  material.rs  semantic.rs  tonal.rs  transform.rs
crates/spectrum-palette/tests/: semantic.rs  tonal.rs  transform.rs
crates/spectrum-ratatui/: Cargo.toml
crates/spectrum-ratatui/examples/: basic.rs
crates/spectrum-ratatui/src/: lib.rs
crates/spectrum-ratatui/tests/: style.rs
crates/spectrum-resolver/: Cargo.toml
crates/spectrum-resolver/src/: color.rs  error.rs  font_style.rs  font_weight.rs  length.rs  lib.rs  line_height.rs  radius.rs  shadow.rs  theme.rs
crates/spectrum-resolver/tests/: color.rs  font_style.rs  font_weight.rs  length.rs  line_height.rs  radius.rs  shadow.rs  theme.rs
crates/spectrum-schema/: Cargo.toml
crates/spectrum-schema/src/: error.rs  lib.rs  meta.rs  shadow.rs  spec.rs  value.rs
crates/spectrum-schema/tests/: meta.rs  spec.rs  value.rs
crates/spectrum-theme/: Cargo.toml  build.rs
crates/spectrum-theme/examples/: minimal.rs
crates/spectrum-theme/src/: config.rs  lib.rs  source.rs
crates/spectrum-theme/tests/: compile.rs  macros.rs  workspace.rs
crates/spectrum-theme/tests/data/: contract-values.toml  contract.tokens  theme.toml
crates/spectrum-theme/tests/ui/: invalid_contract.tokens  invalid_schema.rs  invalid_schema.stderr  invalid_schema.toml  unresolved_reference.rs  unresolved_reference.stderr  unresolved_reference.toml
docs/: architecture.md  architecture_ZH.md  dependencies.md  dependencies_ZH.md  usage.md  usage_ZH.md
