[workspace]
members = [
    "crates/spectrum-core",
    "crates/spectrum-codegen",
    "crates/spectrum-iced",
    "crates/spectrum-macros",
    "crates/spectrum-palette",
    "crates/spectrum-ratatui",
    "crates/spectrum-resolver",
    "crates/spectrum-schema",
    "crates/spectrum-theme",
]
default-members = ["crates/spectrum-theme"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
authors = ["Krteke"]
license = "MIT"
repository = "https://github.com/krteke/void-spectrum"

[workspace.dependencies]
material-colors = { version = "0.4.2", default-features = false, features = [
    "std",
] }
iced = { version = "0.14.0", default-features = false }
iced_core = "0.14.0"
palette = { version = "0.7.6", default-features = false, features = ["std"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
proc-macro-crate = "3.5.0"
quote = "1.0.45"
ratatui = { version = "0.30.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"
toml = "1.1.2"

spectrum-core = { version = "0.1.1", path = "crates/spectrum-core" }
spectrum-codegen = { version = "0.1.1", path = "crates/spectrum-codegen" }
spectrum-iced = { version = "0.1.1", path = "crates/spectrum-iced" }
spectrum-macros = { package = "void-spectrum-macros", version = "0.1.1", path = "crates/spectrum-macros" }
spectrum-palette = { version = "0.1.1", path = "crates/spectrum-palette" }
spectrum-ratatui = { version = "0.1.1", path = "crates/spectrum-ratatui" }
spectrum-resolver = { version = "0.1.1", path = "crates/spectrum-resolver" }
spectrum-schema = { version = "0.1.1", path = "crates/spectrum-schema" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
