[package]
name = "spectrum-codegen"
description = "Build-time typed token code generation for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
