[package]
name = "spectrum-export"
description = "Theme export infrastructure for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
json = ["dep:serde_json", "spectrum-core/serde"]

[dependencies]
serde_json = { workspace = true, optional = true }
spectrum-core.workspace = true

[lints]
workspace = true
