[package]
name = "spectrum-iced"
description = "Iced adapter for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced_core.workspace = true
spectrum-core.workspace = true

[dev-dependencies]
iced.workspace = true

[lints]
workspace = true
