[package]
name = "spectrum-iced"
description = "Iced adapter for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
runtime = ["dep:iced"]

[dependencies]
iced = { workspace = true, optional = true }
iced_core.workspace = true
spectrum-core.workspace = true

[[example]]
name = "basic"
required-features = ["runtime"]

[lints]
workspace = true
