[package]
name = "spectrum-iced"
description = "Iced adapter for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
runtime = ["dep:iced"]

[dependencies]
iced = { workspace = true, default-features = false, optional = true, features = [
    "crisp",
    "thread-pool",
    "tiny-skia",
    "wayland",
    "web-colors",
    "wgpu",
    "x11",
] }
iced_core.workspace = true
spectrum-core.workspace = true
thiserror.workspace = true

[[example]]
name = "basic"
required-features = ["runtime"]

[lints]
workspace = true
