[package]
name = "spectrum-macros"
description = "Typed token procedural macros for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
proc-macro-crate.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
