[package]
name = "spectrum-ratatui"
description = "Ratatui adapter for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ratatui.workspace = true
spectrum-core.workspace = true

[dev-dependencies]
ratatui = { workspace = true, features = ["crossterm"] }

[lints]
workspace = true
