[package]
name = "spectrum-resolver"
description = "Theme merge and token resolution pipeline for Void Spectrum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
spectrum-core.workspace = true
spectrum-palette.workspace = true
spectrum-schema.workspace = true

[lints]
workspace = true
