[package]
name = "spectrum-schema"
description = "Configuration schema for the Void Spectrum theme engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
json = ["dep:serde_json"]
toml = ["dep:toml"]

[dependencies]
serde.workspace = true
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
spectrum-core = { workspace = true, features = ["serde"] }
thiserror.workspace = true

[lints]
workspace = true
