[package]
name = "spectrum-theme"
description = "Typed theme-token engine facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["theme", "color", "design-tokens", "palette"]
categories = ["config", "gui"]

[features]
default = ["seed"]
seed = ["spectrum-palette/seed"]
serde = ["spectrum-core/serde"]
toml = ["serde", "dep:toml"]
macros = ["dep:spectrum-macros"]
iced = ["dep:spectrum-iced"]
ratatui = ["dep:spectrum-ratatui"]

[dependencies]
spectrum-core.workspace = true
spectrum-iced = { workspace = true, optional = true }
spectrum-macros = { workspace = true, optional = true }
spectrum-palette.workspace = true
spectrum-ratatui = { workspace = true, optional = true }
thiserror.workspace = true
toml = { workspace = true, optional = true }

[build-dependencies]
spectrum-codegen.workspace = true

[lints]
workspace = true
